1.10:
-----
    * Remove abandoned ping services from options
    * Remove fallback code for HTTP/Request, as that was removed from Serendipity
    * Restore options form for the entry editor
    * Make host and path detection of custom ping services more reliable
    * Always ping https://, instead of forcing http://
    * Enable ping status detection when the service does not return an xmlrpc response

1.09:
-----
    * Added serendipity_request_url API method