@@ -6,6 +6,7 @@
     * Make host and path detection of custom ping services more reliable
     * Always ping https://, instead of forcing http://
     * Enable ping status detection when the service does not return an xmlrpc response
+    * Delay pings for entries scheduled for the future
 
 1.09:
 -----
